--- a/index.html
+++ b/index.html
@@ -203,5 +203,14 @@
             }
         }
     </script>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-8D9FHG4X20"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-8D9FHG4X20');
+</script>
 </body>
 </html>
